[package]
name = "axon_parser"
version = "0.1.0"
authors = ["A Mackay <amk@gegroup.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
chrono = "0.4"
lalrpop-util = "0.19.1"
raystack = "0.6"
regex = "1"