[package]
name = "axon_parser"
version = "0.5.4"
authors = ["A Mackay <opensauceburner@outlook.com>"]
edition = "2018"
homepage = "https://github.com/a-mackay/axon_parser"
repository = "https://github.com/a-mackay/axon_parser"
description = "Parses a representation of SkySpark's Axon language into an AST"
keywords = ["skyspark", "axon"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
axon_parseast_parser = "0.6"
raystack_core = "0.3"
thiserror = "1.0"